--- a/style.css
+++ b/style.css
@@ -138,7 +138,9 @@ header h1 {
 table {
     margin: 30px auto;
     border-collapse: collapse;
+  background-color: ##b085b0;
 }
+
 
 td {
     width: 150px;
