--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ header h1 {
 table {
     margin: 30px auto;
     border-collapse: collapse;
-  background-color: ##b085b0;
+  background-color: #b085b0;
 }
 
 
